# programmiersprachen-raytracer

./: .gitignore  CMakeLists.txt  README.md
framework/: box.cpp  box.hpp  camera.hpp  color.hpp  file.hpp  light.hpp  material.hpp  ray.hpp  reader.cpp  reader.hpp  scene.hpp  shape.cpp  shape.hpp  simple_scene.sdf  sphere.cpp  sphere.hpp
ressources/: adv-scene.sdf  simple-scene.sdf
source/: CMakeLists.txt  main_test.cpp  tests.cpp
source/tests/: box_test.cpp  camera_test.cpp  dummy_test.hpp  file_test.cpp  light_test.cpp  ray_test.cpp  reader_test.cpp  shape_test.cpp  sphere_test.cpp
